--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,3 +3,7 @@
 @import 'settings'
 @import 'blocks/_header'
 @import 'blocks/_main'
+@import 'blocks/_about'
+@import 'blocks/_partners'
+@import 'blocks/_quality'
+@import 'blocks/_interests'
