added: get-started secrion

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,8 +2,8 @@
     box-sizing: border-box
 @font-face
     font-family: 'Recoleta'
-    src: url('Recoleta.woff') format('woff')
-    src: url('Recoleta.woff2') format('woff2')
+    src: url('../fonts/Recoleta.woff') format('woff')
+    src: url('../fonts/Recoleta.woff2') format('woff2')
     font-weight: normal
     font-style: normal
 .container
