--- a/sass/blocks/_interests.sass
+++ b/sass/blocks/_interests.sass
@@ -4,7 +4,7 @@
     &__section
         padding: 0px 20px 0px 20px
     &__title
-        font-family: Recoleta serif
+        font-family: Recoleta
         font-style: normal
         font-weight: 600
         font-size: 48px
