--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,3 +7,5 @@
 @import 'blocks/_partners'
 @import 'blocks/_quality'
 @import 'blocks/_interests'
+@import 'blocks/_feedback'
+@import 'blocks/_get-started'
