added: footer section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,3 +9,5 @@
 @import 'blocks/_interests'
 @import 'blocks/_feedback'
 @import 'blocks/_get-started'
+@import 'blocks/_subscribe'
+@import 'blocks/_footer'
