create: media for 992px and more

--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -32,7 +32,9 @@
         height: 54px
         border: 1px solid #F2EFE6
         border-radius: 255px
+        padding-right: 80px
     &__button
+        height: 100%
         position: absolute
         top: 0
         right: -37px
