--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -21,3 +21,16 @@
     font-weight: normal
     font-size: 16px
     line-height: 22px
+body
+    position: relative
+.navbar-button
+    &__hidden
+        display: none
+    &__close
+        background-color: $white
+        margin-top: 20px
+        margin-right: auto
+        margin-left: 10px
+    &__line
+        &--close
+            background-color: $green
